--- a/OfficeInstaller/Pages/ResultPage.xaml
+++ b/OfficeInstaller/Pages/ResultPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="OfficeInstaller.Pages.ResultPageFail"
+﻿<Page x:Class="OfficeInstaller.Pages.ResultPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -25,7 +25,7 @@
         <Button Width="160" Height="40"
                 Margin="0,20,0,0"
                 Grid.Row="2"
-                Content="关闭程序"
+                Content="关闭程序" Click="Button_Click"
                 Style="{DynamicResource ButtonStyle1}"
                 FontSize="16" />
     </Grid>
