--- a/OfficeInstaller/Pages/ResultPageFail.xaml
+++ b/OfficeInstaller/Pages/ResultPageFail.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="OfficeInstaller.Pages.ResultPage"
+﻿<Page x:Class="OfficeInstaller.Pages.ResultPageFail"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -22,20 +22,25 @@
                    Foreground="{StaticResource MainBrush}"
                    Text="安装失败"
                    FontSize="48" FontFamily="Microsoft Yahei UI Light" />
-        <ListBox Grid.Row="2"
+        <ListBox Margin="10,20"
+                 Grid.Row="2"
                  ItemContainerStyle="{DynamicResource ListBoxItemContainerStyle1}"
                  Style="{DynamicResource ListBoxStyle1}"
                  ItemsSource="{Binding Logs}" />
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+        <StackPanel HorizontalAlignment="Center"
+                    Grid.Row="3"
+                    Orientation="Horizontal">
             <Button Width="160" Height="40"
                     Margin="0,0,0,0"
                     Content="关闭程序"
+                    Click="ButtonClose_Click"
                     Style="{DynamicResource ButtonStyle1}"
                     FontSize="16" />
             <Button Width="160" Height="40"
                     Margin="10,0,0,0"
                     Grid.Row="3"
                     Content="返回首页"
+                    Click="Button_Click"
                     Style="{DynamicResource ButtonStyle1}"
                     FontSize="16" />
         </StackPanel>
