--- a/OfficeInstaller/Pages/ResultPage.xaml
+++ b/OfficeInstaller/Pages/ResultPage.xaml
@@ -15,16 +15,22 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Image Width="80" Source="{StaticResource checkDrawingImage}" />
         <TextBlock HorizontalAlignment="Center"
                    Grid.Row="1"
                    Foreground="{StaticResource MainBrush}"
-                   Text="安装完成"
+                   Text="{Binding Message}"
                    FontSize="48" FontFamily="Microsoft Yahei UI Light" />
+        <TextBlock HorizontalAlignment="Center"
+                   Grid.Row="2" Margin="0,10,0,0"
+                   Foreground="{StaticResource MainBrush}"
+                   Text="{Binding Info}"
+                   FontSize="12" FontFamily="Microsoft Yahei UI Light" />
         <Button Width="160" Height="40"
                 Margin="0,20,0,0"
-                Grid.Row="2"
+                Grid.Row="3"
                 Content="关闭程序" Click="Button_Click"
                 Style="{DynamicResource ButtonStyle1}"
                 FontSize="16" />
