--- a/OfficeInstaller/Pages/ResultPageFail.xaml
+++ b/OfficeInstaller/Pages/ResultPageFail.xaml
@@ -43,6 +43,13 @@
                     Click="Button_Click"
                     Style="{DynamicResource ButtonStyle1}"
                     FontSize="16" />
+            <Button Width="160" Height="40"
+                    Margin="10,0,0,0"
+                    Grid.Row="3"
+                    Content="去论坛反馈"
+                    Click="ButtonFeedback_Click"
+                    Style="{DynamicResource ButtonStyle1}"
+                    FontSize="16" />
         </StackPanel>
     </Grid>
 </Page>
