--- a/OfficeInstaller/MainWindow.xaml
+++ b/OfficeInstaller/MainWindow.xaml
@@ -5,8 +5,8 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:OfficeInstaller"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="SJTU 正版软件 - Office 2021 一键安装工具"
-    Width="600"
+    Title="{DynamicResource WindowTitle}"
+    Width="620"
     Height="600" Closing="Window_Closing"
     mc:Ignorable="d" Icon="/Images/office.ico">
     <Grid>
