--- a/OfficeInstaller/Pages/ResultPage.xaml
+++ b/OfficeInstaller/Pages/ResultPage.xaml
@@ -31,7 +31,7 @@
         <Button Width="160" Height="40"
                 Margin="0,20,0,0"
                 Grid.Row="3"
-                Content="关闭程序" Click="Button_Click"
+                Content="{DynamicResource CloseApp}" Click="Button_Click"
                 Style="{DynamicResource ButtonStyle1}"
                 FontSize="16" />
     </Grid>
