--- a/OfficeInstaller/Pages/ResultPage.xaml
+++ b/OfficeInstaller/Pages/ResultPage.xaml
@@ -9,7 +9,8 @@
       d:DesignWidth="600"
       mc:Ignorable="d">
 
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center"
+          Margin="10,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -19,19 +20,26 @@
         </Grid.RowDefinitions>
         <Image Width="80" Source="{StaticResource checkDrawingImage}" />
         <TextBlock HorizontalAlignment="Center"
+                   TextWrapping="Wrap"
                    Grid.Row="1"
                    Foreground="{StaticResource MainBrush}"
                    Text="{Binding Message}"
+                   d:Text="Office is installed and activated"
+                   TextAlignment="Center"
                    FontSize="48" FontFamily="Microsoft Yahei UI Light" />
         <TextBlock HorizontalAlignment="Center"
-                   Grid.Row="2" Margin="0,10,0,0"
+                   TextWrapping="Wrap" Margin="0,10,0,0"
+                   Grid.Row="2"
                    Foreground="{StaticResource MainBrush}"
                    Text="{Binding Info}"
+                   TextAlignment="Center"
+                   d:Text="Currently the SJTU KMS server is not available, please connect to the campus network and the Office application will be activated automatically."
                    FontSize="12" FontFamily="Microsoft Yahei UI Light" />
         <Button Width="160" Height="40"
                 Margin="0,20,0,0"
                 Grid.Row="3"
-                Content="{DynamicResource CloseApp}" Click="Button_Click"
+                Content="{DynamicResource CloseApp}"
+                Click="Button_Click"
                 Style="{DynamicResource ButtonStyle1}"
                 FontSize="16" />
     </Grid>
