--- a/OfficeInstaller/Pages/WelcomePage.xaml
+++ b/OfficeInstaller/Pages/WelcomePage.xaml
@@ -24,8 +24,10 @@
         </Style>
     </Page.Resources>
 
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+    <Grid HorizontalAlignment="Center" VerticalAlignment="Center"
+          Margin="10,0">
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
@@ -41,7 +43,7 @@
                        Text="Office"
                        FontSize="50" FontFamily="Segeo UI Light" />
         </StackPanel>
-        <Grid Grid.Row="1">
+        <Grid Grid.Row="1" HorizontalAlignment="Center">
             <Border Width="380"
                     Margin="8"
                     Grid.RowSpan="2"
@@ -91,7 +93,8 @@
                        FontSize="16" />
             <CheckBox VerticalAlignment="Center"
                       Margin="10,0"
-                      IsChecked="{Binding Eng}" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"
+                      IsChecked="{Binding Eng}"
+                      Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"
                       Style="{StaticResource ToggleStyle}">
                 <CheckBox.LayoutTransform>
                     <ScaleTransform ScaleX="1.0" ScaleY="1.0" />
@@ -108,5 +111,12 @@
                 Style="{DynamicResource ButtonStyle2}"
                 Click="Button_Click"
                 FontSize="20" />
+        <TextBlock HorizontalAlignment="Center"
+                   TextWrapping="Wrap" Margin="0,10,0,0"
+                   Grid.Row="4"
+                   Foreground="{StaticResource MainBrush}"
+                   Text="{DynamicResource HomeTip}"
+                   TextAlignment="Center"
+                   FontSize="16" />
     </Grid>
 </Page>
