--- a/OfficeInstaller/Resources/en-us.xaml
+++ b/OfficeInstaller/Resources/en-us.xaml
@@ -3,6 +3,7 @@
                     xmlns:sys="clr-namespace:System;assembly=mscorlib"
                     xml:space="preserve">
     <sys:String x:Key="WindowTitle">SJTU Software Licensing Center - Office 2021 OneKey Install Tool</sys:String>
+    <sys:String x:Key="HomeTip">It is recommended to connect to the campus network in order to activate Office directly.</sys:String>
 
     <sys:String x:Key="SelectProducts">Select Products</sys:String>
     <sys:String x:Key="InstallAndAct">Install &amp; Activate</sys:String>
