--- a/OfficeInstaller/Resources/zh-cn.xaml
+++ b/OfficeInstaller/Resources/zh-cn.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
     <sys:String x:Key="WindowTitle">SJTU 正版软件 - Office 2021 一键安装工具</sys:String>
+    <sys:String x:Key="HomeTip">建议连接到交大校园网，以便直接激活 Office</sys:String>
     
     <sys:String x:Key="SelectProducts">产品选择</sys:String>
     <sys:String x:Key="InstallAndAct">一键安装并激活</sys:String>
