--- a/OfficeInstaller/MainWindow.xaml
+++ b/OfficeInstaller/MainWindow.xaml
@@ -1,22 +1,28 @@
-﻿<Window
-    x:Class="OfficeInstaller.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:OfficeInstaller"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="{DynamicResource WindowTitle}"
-    Width="620"
-    Height="600" Closing="Window_Closing"
-    mc:Ignorable="d" Icon="/Images/office.ico">
+﻿<Window x:Class="OfficeInstaller.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:local="clr-namespace:OfficeInstaller"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        Title="{DynamicResource WindowTitle}"
+        Width="620" Height="600"
+        Closing="Window_Closing" Icon="/Images/office.ico"
+        mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Border Background="#ae1613" >
-            <Image Source="/Images/logo.png" Margin="10" Height="50"/>
+
+
+        <Border Background="#ae1613">
+            <Image Height="50"
+                   Margin="10"
+                   Source="/Images/logo.png" />
         </Border>
-        <Frame x:Name="MainFrame" Grid.Row="1" JournalOwnership="UsesParentJournal"/>
+        <Frame x:Name="MainFrame"
+               Grid.Row="2"
+               JournalOwnership="UsesParentJournal" />
     </Grid>
 </Window>
