--- a/OfficeInstaller/Resources/en-us.xaml
+++ b/OfficeInstaller/Resources/en-us.xaml
@@ -33,6 +33,8 @@
 
     <sys:String x:Key="InstallFailTitle">Installation failed</sys:String>
     <sys:String x:Key="CloseApp">Close</sys:String>
+    <sys:String x:Key="ActivateFailTitle">Activation failed</sys:String>
+    <sys:String x:Key="ReActivate">Retry activate</sys:String>
     <sys:String x:Key="GoIndex">Back home</sys:String>
     <sys:String x:Key="Feedback">Feedback</sys:String>
 
