--- a/OfficeInstaller/Pages/WelcomePage.xaml
+++ b/OfficeInstaller/Pages/WelcomePage.xaml
@@ -32,6 +32,7 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
                     Margin="0,0,0,20"
@@ -43,7 +44,7 @@
                        Text="Office"
                        FontSize="50" FontFamily="Segeo UI Light" />
         </StackPanel>
-        <Grid Grid.Row="1" HorizontalAlignment="Center">
+        <Grid HorizontalAlignment="Center" Grid.Row="1">
             <Border Width="380"
                     Margin="8"
                     Grid.RowSpan="2"
@@ -84,9 +85,16 @@
                 <Run Text="" />
             </TextBlock>
         </Grid>
+        <TextBlock HorizontalAlignment="Center"
+                   TextWrapping="Wrap" Margin="20,0"
+                   Grid.Row="2" MaxWidth="400"
+                   Foreground="{StaticResource MainBrush}"
+                   Text="{DynamicResource OverwriteTip}"
+                   TextAlignment="Center"
+                   FontSize="10" />
         <StackPanel HorizontalAlignment="Center"
                     Margin="0,10"
-                    Grid.Row="2"
+                    Grid.Row="3"
                     Orientation="Horizontal">
             <TextBlock VerticalAlignment="Center"
                        Text="中文"
@@ -106,14 +114,14 @@
         </StackPanel>
         <Button Width="240" Height="60"
                 Margin="10,20"
-                Grid.Row="3"
+                Grid.Row="4"
                 Content="{DynamicResource InstallAndAct}"
                 Style="{DynamicResource ButtonStyle2}"
                 Click="Button_Click"
                 FontSize="20" />
         <TextBlock HorizontalAlignment="Center"
                    TextWrapping="Wrap" Margin="0,10,0,0"
-                   Grid.Row="4"
+                   Grid.Row="5"
                    Foreground="{StaticResource MainBrush}"
                    Text="{DynamicResource HomeTip}"
                    TextAlignment="Center"
