--- a/OfficeInstaller/Resources/zh-cn.xaml
+++ b/OfficeInstaller/Resources/zh-cn.xaml
@@ -1,9 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <sys:String x:Key="WindowTitle">SJTU 正版软件 - Office 2021 一键安装工具</sys:String>
+    <sys:String x:Key="WindowTitle">SJTU 正版软件 - Office 2021 一键安装工具 - 离线版本</sys:String>
     <sys:String x:Key="HomeTip">建议连接到交大校园网，以便直接激活 Office</sys:String>
     <sys:String x:Key="OverwriteTip">请选择所有需要的产品！程序将卸载所有已安装的产品，并安装勾选的产品！</sys:String>
+    <sys:String x:Key="OfflineInstall">离线安装</sys:String>
     
     <sys:String x:Key="SelectProducts">产品选择</sys:String>
     <sys:String x:Key="InstallAndAct">一键安装并激活</sys:String>
