--- a/OfficeInstaller/Pages/WelcomePage.xaml
+++ b/OfficeInstaller/Pages/WelcomePage.xaml
@@ -4,7 +4,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:OfficeInstaller.Pages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      Title="WelcomePage"
+      Title="WelcomePage" Loaded="Page_Loaded"
       d:Background="White" d:DesignHeight="500"
       d:DesignWidth="600"
       mc:Ignorable="d">
@@ -24,16 +24,9 @@
         </Style>
     </Page.Resources>
 
-    <Grid HorizontalAlignment="Center" VerticalAlignment="Center"
-          Margin="10,0">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
+    <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
+                Margin="10,0"
+                Orientation="Vertical">
         <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center"
                     Margin="16,0,0,20"
                     Orientation="Horizontal">
@@ -46,57 +39,25 @@
             <TextBlock VerticalAlignment="Bottom"
                        Margin="4,0,0,18"
                        Foreground="#cf3900"
-                       Text="{DynamicResource OfflineInstall}"
-                       FontSize="12"/>
+                       Text="{DynamicResource OnlyAct}"
+                       FontSize="12" />
         </StackPanel>
-        <Grid HorizontalAlignment="Center" Grid.Row="1">
-            <Border Width="380"
-                    Margin="8"
-                    Grid.RowSpan="2"
-                    Style="{StaticResource GroupBoxStyle}">
-                <Grid Margin="15,10,10,10">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <StackPanel Orientation="Vertical">
-                        <CheckBox Content="PowerPoint" IsChecked="{Binding PowerPoint}" />
-                        <CheckBox Content="Visio" IsChecked="{Binding Visio}" />
-                        <CheckBox Content="Lync" IsChecked="{Binding Lync}" />
-                        <CheckBox Content="OneDrive" IsChecked="{Binding OneDrive}" />
-                    </StackPanel>
-                    <StackPanel Grid.Column="1" Orientation="Vertical">
-                        <CheckBox Content="Word" IsChecked="{Binding Word}" />
-                        <CheckBox Content="Access" IsChecked="{Binding Access}" />
-                        <CheckBox Content="Outlook" IsChecked="{Binding Outlook}" />
-                        <CheckBox Content="Publisher" IsChecked="{Binding Publisher}" />
-                    </StackPanel>
-                    <StackPanel Grid.Column="2" Orientation="Vertical">
-                        <CheckBox Content="Excel" IsChecked="{Binding Excel}" />
-                        <CheckBox Content="OneNote" IsChecked="{Binding OneNote}" />
-                        <CheckBox Content="Teams" IsChecked="{Binding Teams}" />
-                        <CheckBox Content="Project" IsChecked="{Binding Project}" />
-                    </StackPanel>
-                </Grid>
-            </Border>
-            <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top"
-                       Margin="24,0,0,0"
-                       Grid.RowSpan="2"
-                       Background="White"
-                       FontSize="14">
-                <Run Text="" />
-                <Run Text="{DynamicResource SelectProducts}" />
-                <Run Text="" />
-            </TextBlock>
-        </Grid>
-        <TextBlock HorizontalAlignment="Center"
-                   TextWrapping="Wrap" Margin="20,0"
-                   Grid.Row="2" MaxWidth="400"
-                   Foreground="{StaticResource MainBrush}"
-                   Text="{DynamicResource OverwriteTip}"
-                   TextAlignment="Center"
-                   FontSize="10" />
+        <StackPanel Margin="10,0,0,0" Orientation="Horizontal">
+            <Border Width="3" Height="24"
+                    VerticalAlignment="Center"
+                    Background="{StaticResource MainBrush}" />
+            <TextBlock VerticalAlignment="Center"
+                       Margin="10,0,0,0"
+                       Foreground="{StaticResource MainBrush}"
+                       Text="{DynamicResource InstalledProducts}"
+                       FontWeight="Bold"
+                       FontSize="16" />
+        </StackPanel>
+        <ListBox Grid.Row="1"
+                 ItemContainerStyle="{DynamicResource ListBoxItemContainerStyle1}"
+                 Style="{DynamicResource ListBoxStyle1}"
+                 ItemsSource="{Binding Products}" Margin="10,10" BorderThickness="1"/>
+
         <StackPanel HorizontalAlignment="Center"
                     Margin="0,10"
                     Grid.Row="3"
@@ -106,7 +67,6 @@
                        FontSize="16" />
             <CheckBox VerticalAlignment="Center"
                       Margin="10,0"
-                      IsChecked="{Binding Eng}"
                       Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked"
                       Style="{StaticResource ToggleStyle}">
                 <CheckBox.LayoutTransform>
@@ -131,5 +91,5 @@
                    Text="{DynamicResource HomeTip}"
                    TextAlignment="Center"
                    FontSize="16" />
-    </Grid>
+    </StackPanel>
 </Page>
