--- a/OfficeInstaller/Resources/zh-cn.xaml
+++ b/OfficeInstaller/Resources/zh-cn.xaml
@@ -1,29 +1,20 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:sys="clr-namespace:System;assembly=mscorlib">
-    <sys:String x:Key="WindowTitle">SJTU 正版软件 - Office 2021 一键安装工具 - 离线版本</sys:String>
-    <sys:String x:Key="HomeTip">建议连接到交大校园网，以便直接激活 Office</sys:String>
+    <sys:String x:Key="WindowTitle">SJTU 正版软件 - Office 一键激活工具</sys:String>
+    <sys:String x:Key="HomeTip">请连接到交大校园网，否则无法激活 Office</sys:String>
     <sys:String x:Key="OverwriteTip">请选择所有需要的产品！程序将卸载所有已安装的产品，并安装勾选的产品！</sys:String>
-    <sys:String x:Key="OfflineInstall">离线安装</sys:String>
+    <sys:String x:Key="OnlyAct">仅激活</sys:String>
+    <sys:String x:Key="InstalledProducts">已安装产品</sys:String>
     
     <sys:String x:Key="SelectProducts">产品选择</sys:String>
-    <sys:String x:Key="InstallAndAct">一键安装并激活</sys:String>
-    <sys:String x:Key="Installing">正在安装 Office</sys:String>
-    <sys:String x:Key="InstallTip">安装过程无法取消，请耐心等待！请不要关闭计算机电源！</sys:String>
-    <sys:String x:Key="InstallStart">安装开始</sys:String>
-    <sys:String x:Key="ExportConfig">正在导出配置文件</sys:String>
-    <sys:String x:Key="ExportConfigSucc">导出配置文件成功：</sys:String>
-    <sys:String x:Key="ExportConfigFail">生成配置文件失败！</sys:String>
-    <sys:String x:Key="ExtractExe">正在解压资源</sys:String>
-    <sys:String x:Key="ExtractExeSucc">解压资源成功！</sys:String>
-    <sys:String x:Key="ExtractExeFail">解压资源失败！</sys:String>
-    <sys:String x:Key="SetupPath">安装程序路径：</sys:String>
-    <sys:String x:Key="LaunchSucc">安装程序启动成功</sys:String>
-    <sys:String x:Key="LaunchFail">安装程序启动失败！</sys:String>
-    <sys:String x:Key="SetupReturnNonZero">setup.exe 返回值非0</sys:String>
-    <sys:String x:Key="InstallSucc">安装完成！</sys:String>
-    <sys:String x:Key="InstallFail">安装失败！</sys:String>
+    <sys:String x:Key="InstallAndAct">一键激活</sys:String>
+    <sys:String x:Key="Installing">正在激活 Office</sys:String>
+    <sys:String x:Key="InstallTip">激活过程无法取消，请耐心等待！请不要关闭计算机电源！</sys:String>
+    <sys:String x:Key="InstallStart">激活开始</sys:String>
+
     <sys:String x:Key="CheckKMS">正在检测 KMS 服务器可用性</sys:String>
+    <sys:String x:Key="SettingKMS">正在设置 KMS 地址</sys:String>
     <sys:String x:Key="KMSAvail">KMS 服务器可用！</sys:String>
     <sys:String x:Key="KMSUnavail">KMS 服务器不可用！</sys:String>
     <sys:String x:Key="CheckKMSFail">检测 KMS 服务器可用性失败！</sys:String>
@@ -32,15 +23,17 @@
     <sys:String x:Key="ActSucc">激活成功！</sys:String>
     <sys:String x:Key="ActFail">激活失败！</sys:String>
 
-    <sys:String x:Key="InstallFailTitle">安装失败</sys:String>
     <sys:String x:Key="ActivateFailTitle">激活失败</sys:String>
     <sys:String x:Key="ReActivate">重新激活</sys:String>
     <sys:String x:Key="CloseApp">关闭程序</sys:String>
     <sys:String x:Key="GoIndex">返回首页</sys:String>
     <sys:String x:Key="Feedback">去论坛反馈</sys:String>
 
-    <sys:String x:Key="InstalledAndActed">已安装并激活 Office</sys:String>
+    <sys:String x:Key="InstalledAndActed">已激活 Office</sys:String>
     <sys:String x:Key="InstalledAndActedTip">若显示未激活，请连接到校园网，重启 Office 应用程序即可。</sys:String>
-    <sys:String x:Key="Installed">已安装 Office</sys:String>
-    <sys:String x:Key="InstalledTip">当前交大 KMS 服务器不可用，请连接到校园网，Office 应用程序将自动激活。</sys:String>
+
+    <sys:String x:Key="Warning">警告</sys:String>
+    <sys:String x:Key="NoInstalled">未检测到已安装的 Office 产品，请先安装 Office</sys:String>
+    <sys:String x:Key="NotSupported">检测到以下 Office 产品不支持通过此方式激活：</sys:String>
+    <sys:String x:Key="Continue">是否继续？</sys:String>
 </ResourceDictionary>
