--- a/OfficeInstaller/Pages/WelcomePage.xaml
+++ b/OfficeInstaller/Pages/WelcomePage.xaml
@@ -120,6 +120,9 @@
         <Button Width="240" Height="60"
                 Margin="10,20"
                 Grid.Row="4"
+                FontFamily="Microsoft Yahei UI"
+                FontWeight="Bold"
+                SnapsToDevicePixels="True"
                 Content="{DynamicResource InstallAndAct}"
                 Style="{DynamicResource ButtonStyle2}"
                 Click="Button_Click"
